--- a/node-app/package.json
+++ b/node-app/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "tsc",
+    "serve": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jacob Tan",
@@ -17,6 +18,7 @@
     "@types/multer": "^1.3.7",
     "@types/uuid": "^3.4.4",
     "nodemon": "^1.18.10",
+    "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.14.0",
     "typescript": "^3.3.4000"
   },
