--- a/node-app/package.json
+++ b/node-app/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "tsc",
     "serve": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
+    "dev": "concurrently -k \"npm run serve\" \"npm start --prefix ../ng-app\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jacob Tan",
@@ -17,6 +18,7 @@
     "@types/mongoose": "^5.3.23",
     "@types/multer": "^1.3.7",
     "@types/uuid": "^3.4.4",
+    "concurrently": "^4.1.0",
     "nodemon": "^1.18.10",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.14.0",
