--- a/node-app/package.json
+++ b/node-app/package.json
@@ -37,6 +37,7 @@
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
     "promise": "^8.0.3",
+    "shortid": "^2.2.14",
     "uuid": "^3.3.2"
   }
 }
