--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~8.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.24.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.5.2",
