--- a/node-app/package.json
+++ b/node-app/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
     "@types/multer": "^1.3.7",
+    "@types/nodemailer": "^6.2.0",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10",
@@ -36,6 +37,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "nodemailer": "^6.2.1",
     "promise": "^8.0.3",
     "shortid": "^2.2.14",
     "uuid": "^3.3.2"
