--- a/node-app/package.json
+++ b/node-app/package.json
@@ -39,6 +39,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.2.1",
     "promise": "^8.0.3",
+    "request": "^2.88.0",
     "shortid": "^2.2.14",
     "uuid": "^3.3.2"
   }
