--- a/node-app/package.json
+++ b/node-app/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.3.23",
     "@types/multer": "^1.3.7",
     "@types/nodemailer": "^6.2.0",
+    "@types/shortid": "0.0.29",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10",
@@ -26,6 +27,7 @@
     "typescript": "^3.3.4000"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.5",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
@@ -39,7 +41,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.2.1",
     "promise": "^8.0.3",
-    "request": "^2.88.0",
+    "rxjs": "^6.5.2",
     "shortid": "^2.2.14",
     "uuid": "^3.3.2"
   }
