--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "angularx-qrcode": "^1.6.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
