--- a/node-app/package.json
+++ b/node-app/package.json
@@ -18,6 +18,7 @@
     "@types/mongoose": "^5.3.23",
     "@types/multer": "^1.3.7",
     "@types/nodemailer": "^6.2.0",
+    "@types/qrcode": "^1.3.3",
     "@types/shortid": "0.0.29",
     "@types/uuid": "^3.4.4",
     "concurrently": "^4.1.0",
@@ -41,6 +42,7 @@
     "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^6.2.1",
     "promise": "^8.0.3",
+    "qrcode": "^1.3.4",
     "rxjs": "^6.5.2",
     "shortid": "^2.2.14",
     "uuid": "^3.3.2"
