add ngrx into app

--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -25,6 +25,10 @@
     "@angular/pwa": "^0.801.0",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
+    "@ngrx/data": "^8.1.0",
+    "@ngrx/effects": "^8.1.0",
+    "@ngrx/entity": "^8.1.0",
+    "@ngrx/store": "^8.1.0",
     "angularx-qrcode": "^1.6.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
