--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -37,7 +37,8 @@
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "@ngrx/store-devtools": "^8.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
