--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -25,20 +25,25 @@
     "@angular/pwa": "^0.801.0",
     "@angular/router": "~8.0.0",
     "@angular/service-worker": "~8.0.0",
+    "@grapecity/spread-excelio": "^12.2.5",
+    "@grapecity/spread-sheets-angular": "^12.2.5",
+    "@grapecity/spread-sheets-charts": "^12.2.5",
     "@ngrx/data": "^8.1.0",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/entity": "^8.1.0",
     "@ngrx/store": "^8.1.0",
+    "@ngrx/store-devtools": "^8.0.0",
     "angularx-qrcode": "^1.6.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "@ngrx/store-devtools": "^8.0.0"
+    "xlsx": "^0.15.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
