--- a/ng-app/angular.json
+++ b/ng-app/angular.json
@@ -24,7 +24,7 @@
                             "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                             "src/styles.css"
                         ],
-                        "scripts": ["./node_modules/file-saver/FileSaver.js"]
+                        "scripts": ["./node_modules/file-saver/dist/FileSaver.min.js"]
                     },
                     "configurations": {
                         "production": {
