--- a/node-app/package.json
+++ b/node-app/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.3.23",
     "@types/multer": "^1.3.7",
+    "@types/node-schedule": "^1.2.4",
     "@types/nodemailer": "^6.2.0",
     "@types/qrcode": "^1.3.3",
     "@types/shortid": "0.0.29",
@@ -40,6 +41,7 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "node-schedule": "^1.3.2",
     "nodemailer": "^6.2.1",
     "promise": "^8.0.3",
     "qrcode": "^1.3.4",
