--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -33,12 +33,14 @@
     "@ngrx/entity": "^8.1.0",
     "@ngrx/store": "^8.1.0",
     "@ngrx/store-devtools": "^8.0.0",
+    "@zxing/ngx-scanner": "^2.0.1",
     "angularx-qrcode": "^1.6.1",
     "core-js": "^2.5.4",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
     "ng2-file-upload": "^1.3.0",
+    "ngx-qrcode2": "0.0.9",
     "ngx-toastr": "^10.0.2",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
