--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -43,7 +43,7 @@
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "xlsx": "^0.15.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
@@ -65,6 +65,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.4.5"
+    "typescript": "^3.7.2"
   }
 }
