--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -12,59 +12,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.0",
-    "@angular/cdk": "~8.0.0",
-    "@angular/common": "~8.0.0",
-    "@angular/compiler": "~8.0.0",
-    "@angular/core": "~8.0.0",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "~8.0.0",
-    "@angular/material": "^8.0.0",
-    "@angular/platform-browser": "~8.0.0",
-    "@angular/platform-browser-dynamic": "~8.0.0",
-    "@angular/pwa": "^0.801.0",
-    "@angular/router": "~8.0.0",
-    "@angular/service-worker": "~8.0.0",
-    "@grapecity/spread-excelio": "^12.2.5",
-    "@grapecity/spread-sheets-angular": "^12.2.5",
-    "@grapecity/spread-sheets-charts": "^12.2.5",
-    "@ngrx/data": "^8.1.0",
-    "@ngrx/effects": "^8.1.0",
-    "@ngrx/entity": "^8.1.0",
-    "@ngrx/store": "^8.1.0",
-    "@ngrx/store-devtools": "^8.0.0",
-    "angularx-qrcode": "^1.6.1",
-    "core-js": "^2.5.4",
+    "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
+    "@angular/common": "~8.2.14",
+    "@angular/compiler": "~8.2.14",
+    "@angular/core": "~8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "~8.2.14",
+    "@angular/platform-browser-dynamic": "~8.2.14",
+    "@angular/pwa": "^0.803.19",
+    "@angular/router": "~8.2.14",
+    "@angular/service-worker": "~8.2.14",
+    "@grapecity/spread-excelio": "^13.0.1",
+    "@grapecity/spread-sheets-angular": "^13.0.1",
+    "@grapecity/spread-sheets-charts": "^13.0.1",
+    "@ngrx/data": "^8.5.2",
+    "@ngrx/effects": "^8.5.2",
+    "@ngrx/entity": "^8.5.2",
+    "@ngrx/store": "^8.5.2",
+    "@ngrx/store-devtools": "^8.5.2",
+    "angularx-qrcode": "^1.7.0-beta.5",
+    "core-js": "^3.4.4",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
-    "ng2-file-upload": "^1.3.0",
-    "ngx-toastr": "^10.0.2",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "xlsx": "^0.15.1",
+    "ng2-file-upload": "^1.4.0",
+    "ngx-toastr": "^11.2.1",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
+    "xlsx": "^0.15.3",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.0",
-    "@angular/compiler-cli": "~8.0.0",
-    "@angular/language-service": "~8.0.0",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "~0.803.19",
+    "@angular/cli": "~8.3.19",
+    "@angular/compiler-cli": "~8.2.14",
+    "@angular/language-service": "~8.2.14",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "~12.12.14",
+    "codelyzer": "^5.2.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "prettier": "^1.18.2",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "prettier": "^1.19.1",
     "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "^3.7.2"
+    "ts-node": "~8.5.2",
+    "tslint": "~5.20.1",
+    "typescript": "^3.5.3"
   }
 }
