--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -38,8 +38,8 @@
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "moment": "^2.24.0",
-    "ng2-file-upload": "^1.4.0",
-    "ngx-toastr": "^11.2.1",
+    "ng2-file-upload": "1.3.0",
+    "ngx-toastr": "10.0.2",
     "rxjs": "~6.5.3",
     "tslib": "^1.10.0",
     "xlsx": "^0.15.3",
