--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -37,6 +37,7 @@
     "core-js": "^3.4.4",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.5.3",
     "moment": "^2.24.0",
     "ng2-file-upload": "1.3.0",
     "ngx-toastr": "10.0.2",
