--- a/node-app/tsconfig.json
+++ b/node-app/tsconfig.json
@@ -5,7 +5,7 @@
         "target": "es5",
         "moduleResolution": "node",
         "sourceMap": true,
-        "outDir": "../dist/functions"
+        "outDir": "../dist"
     },
     "lib": ["es2015"],
     "compileOnSave": true
