--- a/node-app/package.json
+++ b/node-app/package.json
@@ -8,7 +8,11 @@
     "serve": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "dev": "concurrently -k \"npm run serve\" \"npm run start-open --prefix ../ng-app\" ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "rimraf webpack-dist/server.bundle.js && webpack"
+    "webpack": "rimraf webpack-dist/server.bundle.js && webpack",
+    "deploy": "tsc && npm run webpack && npm --prefix ../ng-app run build:prod && npm --prefix ../webpack-dist install",
+    "deploy:server-only": "tsc && npm run webpack",
+    "deploy:clientApp-only": "npm --prefix ../ng-app run build:prod",
+    "deploy:server-with-packages": "tsc && npm run webpack"
   },
   "author": "Jacob Tan",
   "license": "MIT",
@@ -23,7 +27,9 @@
     "@types/qrcode": "^1.3.4",
     "@types/shortid": "0.0.29",
     "@types/uuid": "^3.4.6",
+    "babel-loader": "^8.0.6",
     "concurrently": "^4.1.2",
+    "copy-webpack-plugin": "^5.1.1",
     "nodemon": "^1.19.4",
     "ts-node-dev": "^1.0.0-pre.43",
     "tslint": "^5.20.0",
